--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ cmake_minimum_required(VERSION 3.7)
 
    FILES_DSP
        source/chorus.cpp
+       source/circularBuffer.cpp
  )
 
  target_include_directories(sve-chorus
